--- a/messages/install.txt
+++ b/messages/install.txt
@@ -2,6 +2,8 @@ thanks for installing codeivate!
 
 Please see codeivate.com to sign up for an account and for more details.
 
+After you create an account visit http://codeivate.com/token 
+
 
 Cheers,
 Paul
